src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__type_initializers__unresolvable_types_validation.snap
---
source: src/codegen/tests/initialization_test/type_initializers.rs
expression: msg
---
error[E075]: Some initial values were not generated

error[E041]: Cannot generate literal initializer for 'MyStruct2.b': Value cannot be derived
  ┌─ <internal>:9:31
  │
7 │         TYPE MyStruct2: STRUCT
  │              --------- see also
8 │             a : MyStruct  := (a:=5, b:=3);
9 │             b : MyStruct  := (c:=7);
  │                               ^^^^ Cannot generate literal initializer for 'MyStruct2.b': Value cannot be derived
